Version 1.1.1
----------------------------------------------------
22 August 2007
+ Miniadmin was sending its content using 'users' as the
  module. Fixed. 

Version 1.1.0
---------------------------------------------------
11 April 2007
+ Added ability to pick different miniadmin template
+ Updated files : conf/config.php, templates/mini_admin.tpl,
                  templates/alt_mini_admin.tpl 

4 April 2007
+ Updated language functions

Version 1.0.1
---------------------------------------------------
19 February 2007
+ Added translate function
+ Removed constructor reference