@@ -23,7 +23,7 @@ class MiniAdmin {
             return true;
         }
 
-        $GLOBALS['MiniAdmin'][$module][] = $links;
+        $GLOBALS['MiniAdmin'][$module]['links'][] = $links;
         return true;
     }
 
@@ -39,24 +39,43 @@ class MiniAdmin {
         $oTpl->setFile(MINIADMIN_TEMPLATE);
 
         $tpl['MINIADMIN_TITLE'] = dgettext('miniadmin', 'MiniAdmin');
+
         foreach ($GLOBALS['MiniAdmin'] as $module => $links) {
+            
             if (!isset($modlist[$module])) {
                 continue;
             }
-            foreach ($links as $link) {
+
+            foreach ($links['links'] as $link) {
                 $oTpl->setCurrentBlock('links');
                 $oTpl->setData(array('LINE_MODULE' => $modlist[$module],
                                      'ADMIN_LINK' => PHPWS_Text::fixAmpersand($link)));
                 $oTpl->parseCurrentBlock();
             }
             $oTpl->setCurrentBlock('module');
-            $oTpl->setData(array('MODULE' => $modlist[$module]));
+
+            $mod_title = $modlist[$module];
+
+            if (isset($GLOBALS['MiniAdmin'][$module]['title_link'])) {
+                $mod_title = sprintf('<a href="%s">%s</a>', $GLOBALS['MiniAdmin'][$module]['title_link'],
+                                     $mod_title);
+            }
+
+            $oTpl->setData(array('MODULE' => $mod_title));
             $oTpl->parseCurrentBlock();
         }
         $oTpl->setData($tpl);
         $content = $oTpl->get();
         
         Layout::set($content, 'miniadmin', 'mini_admin');
+    }
+
+    function setTitle($module, $link, $add_authkey=false)
+    {
+        if ($add_authkey) {
+            $link = sprintf('%s&amp;authkey=%s', $link, Current_User::getAuthKey());
+        }
+        $GLOBALS['MiniAdmin'][$module]['title_link'] = $link;
     }
 }
 
