@@ -1,3 +1,6 @@
+1 October 2008
++ Added option to set the module title to a specific link.
+
 Version 1.1.1
 ----------------------------------------------------
 22 August 2007
